[KARAF-6203]ensure karaf can build and run with JDK12-fix InstanceTest